Fix Main Section on small screens

--- a/src/sections/Main/Main.css
+++ b/src/sections/Main/Main.css
@@ -1,19 +1,4 @@
-.Main {
-  text-align: center;
-}
-
-.Main-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .Main-logo {
-    animation: Main-logo-spin infinite 20s linear;
-  }
-}
-
-.Main-header {
+.MainSection {
   background-color: #f5f5f5 ;
   background-image: url("mountains.jpg");
   background-position: center;
@@ -26,6 +11,24 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #262626;
+  text-align: center;
+}
+
+@media (max-width: 1000px) {
+  .MainSection{
+      padding:150px 20px 100px 20px;
+  }
+}
+
+.Main-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .Main-logo {
+    animation: Main-logo-spin infinite 20s linear;
+  }
 }
 
 @keyframes Main-logo-spin {
